Bug 92843 - UI: The case of the disappearing zoom slider
Summary: UI: The case of the disappearing zoom slider
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RenderContext
  Show dependency treegraph
 
Reported: 2015-07-20 13:08 UTC by Gordo
Modified: 2016-10-25 19:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
video of behaviour (225.45 KB, video/mp4)
2015-07-20 13:08 UTC, Gordo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-07-20 13:08:52 UTC
Created attachment 117344 [details]
video of behaviour

1. New Text Document.
2. Ctrl + Enter 7 times to insert page breaks.
3. Status Bar -> View Layout -> Single-page view.
4. Right click on zoom percentage in status bar and select Page Width.
5. Place cursor at beginning of document.
6. Scroll several pages down but do not place the cursor there.
7. Status Bar -> View Layout -> Multiple-page view.
8. Repeatedly click on either side of the zoom handle.
Result:
Zoom slider does not render properly or disappears altogether.

Windows Vista 64
Version: 5.1.0.0.alpha1+
Build ID: fcdddbd30a8b5cf6a5cc4d2ff28b7d4a20f8ec6b
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-20_05:21:02
Comment 1 Buovjaga 2015-07-30 15:12:01 UTC
Repro.
Not reproduced with 4.4.4.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 902255645328efde34ddf62227c8278e8dd61ff0
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-30_03:52:07
Locale: en-US (fi_FI)

Ubuntu 15.04 64-bit 
Version: 5.1.0.0.alpha1+
Build ID: 902255645328efde34ddf62227c8278e8dd61ff0
TinderBox: Linux-rpm_deb-x86_64@70-TDF-dbg, Branch:master, Time: 2015-07-30_03:52:32
Locale: en-US (en_US.UTF-8)
Comment 2 Matthew Francis 2015-08-11 08:55:50 UTC
This seems to have begun at the below commit.
Adding Cc: to quikee@gmail.com; Could you possibly take a look at this one? Thanks


commit 56a45fcfd0a881a31f94aa102fe5f03af32a00e1
Author:     Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
AuthorDate: Thu May 7 17:08:54 2015 +0900
Commit:     Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
CommitDate: Mon May 11 10:03:28 2015 +0900

    refactor StatusBar to use RenderContex
    
    Change-Id: Id29dd8ad0d5de77738f162aed530ed191f326aa2
Comment 3 Björn Michaelsen 2015-08-28 11:47:58 UTC
Blocking on 91488, as per comment 2 seems to be RenderContext related.
Comment 4 Commit Notification 2015-09-04 14:33:42 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=072c771be40f7f07ff31497049c1a15dd2f05178

tdf#92843: fix disappearing zoom slider

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2015-09-04 14:41:39 UTC
I have fixed it by removing an old, and it seems, obsolete optimization. Thanks for your help.
Comment 6 Commit Notification 2015-09-04 15:39:00 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cdc5fe87ec8f4670600f86ad9cacac21d627c40f&h=libreoffice-5-0

tdf#92843: fix disappearing zoom slider

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-09-11 09:46:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=99a73cff9e9be6a39292d4d959ea2c0079cde0fe&h=libreoffice-5-0-2

tdf#92843: fix disappearing zoom slider

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 10:29:32 UTC Comment hidden (obsolete)