tdf#92843: fix disappearing zoom slider

Change-Id: I2b45b7cf96af7950cf097c2b6a880e9eda021184
Reviewed-on: https://gerrit.libreoffice.org/18342
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>